syntax = "proto3";

package cargov1;

option go_package = "github.com/deadsnxcks/dbcp/protos/proto/cargo;cargov1";

service CargoService {
    rpc ListCargos (ListCargosRequest) returns (ListCargosResponse);
    rpc ListCargosByVesselID (GetCargosByVesselIDRequest) returns (GetCargosByVesselIDResponse);
    rpc ListCargosByTypeID (GetCargosByTypeIDRequest) returns (GetCargosByTypeIDResponse);
    rpc CreateCargo (CreateCargoRequest) returns (CreateCargoResponse);
    rpc DeleteCargo (DeleteCargoRequest) returns (DeleteCargoResponse);
    rpc GetCargo (GetCargoRequest) returns (GetCargoResponse);
    rpc UpdateCargo (UpdateCargoRequest) returns (UpdateCargoResponse);
}

message Cargo {
    int64 id = 1;
    string title = 2;
    int64 type_id = 3;
    double weight = 4;
    double volume = 5;
    int64 vessel_id = 6;
}

message ListCargosRequest {}
message ListCargosResponse {
    repeated Cargo cargos = 1;
}

message GetCargosByVesselIDRequest {
    int64 vessel_id = 1;
}
message GetCargosByVesselIDResponse {
    repeated Cargo cargos = 1;
}

message GetCargosByTypeIDRequest {
    int64 type_id = 1;
}
message GetCargosByTypeIDResponse {
    repeated Cargo cargos = 1;
}

message GetCargoRequest {
    int64 id = 1;
}
message GetCargoResponse {
    Cargo cargo = 1;
}

message CreateCargoRequest {
    string title = 1;
    int64 type_id = 2;
    double weight = 3;
    double volume = 4;
    int64 vessel_id = 5;
}
message CreateCargoResponse {
    int64 id = 1;
}

message UpdateCargoRequest {
    int64 id = 1;
    optional string title = 2;
    optional int64 type_id = 3;
    optional double weight = 4;
    optional double volume = 5;
    optional int64 vessel_id = 6;
}
message UpdateCargoResponse {}

message DeleteCargoRequest {
    int64 id = 1;
}
message DeleteCargoResponse {}